--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,5 +1,5 @@
 body{
-    background-color: aquamarine;
+    background-color:blueviolet;
     font-family: Arial, Helvetica, sans-serif;
     width: 80%;
     margin: auto;
